--- a/proyecto_2/progra_4/src/main/resources/templates/formularioproveedor.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/formularioproveedor.html
@@ -78,18 +78,17 @@
 
     <!--  <input type="hidden" th:field="*{idProveedor}">-->
 
-        <label>Identificación: <input type="text" th:field="*{idProveedor}"></label>
-        <label>Nombre: <input type="text" th:field="*{nombre}"></label>
-        <label>Correo: <input type="text" th:field="*{correoElectronico}"></label>
-        <label>Contraseña: <input type="text" th:field="*{contrasena}"></label>
-        <label>Teléfono: <input type="text" th:field="*{telefono}"></label>
-        <label>Dirección: <input type="text" th:field="*{direccion}"></label>
-
         <label for="tipoProveedor">Tipo (Físico/Jurídico):</label>
-        <select id="tipoProveedor" name="tipoProveedor" th:field="*{tipoProveedor}">
+        <select id="tipoProveedor" name="tipoProveedor" th:field="*{tipoProveedor}" required>
             <option value="Físico">Físico</option>
             <option value="Jurídico">Jurídico</option>
         </select>
+        <label>Identificación: <input type="text" th:field="*{idProveedor}" required></label>
+        <label>Nombre: <input type="text" th:field="*{nombre}" required></label>
+        <label>Correo: <input type="text" th:field="*{correoElectronico}" required></label>
+        <label>Contraseña: <input type="text" th:field="*{contrasena}" required></label>
+        <label>Teléfono: <input type="text" th:field="*{telefono}" required></label>
+        <label>Dirección: <input type="text" th:field="*{direccion}" required></label>
 
 
         <button type="submit">Guardar</button>
