Implementacion CSS y multilenguaje formularios Home, login y registro.

--- a/proyecto_2/progra_4/src/main/resources/static/css/ListarClientes.css
+++ b/proyecto_2/progra_4/src/main/resources/static/css/ListarClientes.css
@@ -47,7 +47,7 @@ tr:hover {
     margin-right: 5px;
     cursor: pointer;
     background: paleturquoise;
-    border: 1px solid #ccc;
+    border: 1px solid #2b312d;
 }
 
 .edit-button {
