--- a/proyecto_2/progra_4/src/main/resources/templates/login.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/login.html
@@ -1,108 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:fmt="http://www.w3.org/1999/XSL/Transform">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar sesión</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-
-        .container {
-            max-width: 400px;
-            width: 100%;
-            padding: 20px;
-            background: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        label {
-            font-weight: bold;
-            display: block;
-            margin-bottom: 10px;
-        }
-
-        input[type="text"],
-        input[type="password"],
-        input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 20px;
-            border: 1px solid #ccc;
-            border-radius: 3px;
-            box-sizing: border-box;
-            font-size: 16px;
-        }
-
-        input[type="submit"] {
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-        }
-
-        input[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        input[type="submit"]:active {
-            background-color: #3e8e41;
-        }
-
-        input[type="text"]:focus,
-        input[type="password"]:focus {
-            border: 2px solid #4CAF50;
-        }
-
-        input[type="submit"]:focus {
-            outline: none;
-        }
-
-        .link {
-            display: block;
-            text-align: center;
-            margin-top: 20px;
-            text-decoration: none;
-            color: #007bff;
-        }
-
-        .link:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title th:text="#{IniciarSesion}">Iniciar sesión</title>
+    <link rel="stylesheet" th:href="@{/css/template.css}">
+    <link rel="stylesheet" th:href="@{/css/IniciarSesion.css}">
 </head>
+<header th:replace="/template :: header"></header>
 <body>
 <div class="container">
-    <h1>Iniciar sesión</h1>
+    <h1 th:text="#{IniciarSesion}">Iniciar sesión</h1>
     <form action="/LoginController/login" method="post">
-        <label for="numero_identificacion">Número de Identificación:</label>
+        <img src="/Imagenes/Provedor.png" alt="Descripción de la imagen" class="ImgenInicio"><br><br>
+        <label for="numero_identificacion" th:text="#{ID}">Número de Identificación:</label>
         <input type="text" id="numero_identificacion" name="numero_identificacion" required><br>
 
-        <label for="contrasena">Contraseña:</label>
+        <label for="contrasena" th:text="#{Contrasena}">Contraseña:</label>
         <input type="password" id="contrasena" name="contrasena" required><br>
 
-        <input type="submit" value="Iniciar sesión">
+        <input type="submit" th:value="#{IniciarSesion}" value="Iniciar sesión">
 
         <p th:if="${error}" style="color: red;">${error}</p>
     </form>
 
-    <a th:href="@{/}" class="link">Ir a la página de inicio</a>
+    <a th:href="@{/}" class="link" th:text="#{PaginaInicio}">Ir a la página de inicio</a>
 </div>
+<footer th:replace="~{/template :: footer}"></footer>
+
 </body>
 </html>
 
