--- a/proyecto_2/progra_4/src/main/resources/templates/listarFacturas.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/listarFacturas.html
@@ -54,21 +54,21 @@
         }
 
         .pdf-button {
-            background-color: #4CAF50;
+            background-color: rgba(53, 117, 55, 0.87);
             color: white;
         }
 
         .pdf-button:hover {
-            background-color: #45a049;
+            background-color: rgba(53, 117, 55, 0.87);
         }
 
         .xml-button {
-            background-color: #f44336;
+            background-color: #065b80;
             color: white;
         }
 
         .xml-button:hover {
-            background-color: #d32f2f;
+            background-color: #065b80;
         }
     </style>
 </head>
@@ -79,6 +79,7 @@
     <td><button class="button" th:onclick="'window.location.href=\'/homecontroler/ProveedorAcciones\''">Volver</button></td>
     <td><button class="button" th:onclick="'window.location.href=\'/FacturaController/NuevaFactura\''">Nueva Factura</button></td>
     <td><button class="button pdf-button" th:onclick="'window.location.href=\'/FacturaController/pdf\''">Generar PDF de Facturas</button></td>
+    <td><button class="button xml-button" th:onclick="'window.location.href=\'/FacturaController/xml\''">Generar XML de Facturas</button></td>
 
     <table>
         <tr>
