--- a/proyecto_2/progra_4/src/main/resources/templates/login.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/login.html
@@ -26,8 +26,7 @@
 
     <a th:href="@{/}" class="link" th:text="#{PaginaInicio}">Ir a la página de inicio</a>
 </div>
-<footer th:replace="~{/template :: footer}"></footer>
-
+<footer th:replace="~{/template :: footerWithLogout}"></footer>
 </body>
 </html>
 
