--- a/proyecto_2/progra_4/src/main/resources/templates/registroCliente.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/registroCliente.html
@@ -33,8 +33,7 @@
         </div>
 
     </form>
-    <footer th:replace="/template :: footer"></footer>
-    </body>
+<footer th:replace="~{/template :: footerWithLogout}"></footer>    </body>
 </html>
 
 
