--- a/proyecto_2/progra_4/src/main/resources/templates/proveedorAcciones.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/proveedorAcciones.html
@@ -1,90 +1,57 @@
 <!DOCTYPE html>
-
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
+<html lang="es" xmlns:th="http://www.thymeleaf.org" xmlns:fmt="http://www.w3.org/1999/XSL/Transform">
 <head>
     <meta charset="UTF-8">
-    <title>HOME</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            width: 50%;
-            margin: 20px auto;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            display: grid;
-            gap: 10px;
-        }
-
-        h1 {
-            text-align: center;
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        form {
-            display: grid;
-            gap: 10px;
-        }
-
-        label {
-            font-weight: bold;
-        }
-
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-        }
-
-        button[type="submit"] {
-            padding: 10px 20px;
-            background-color: #4caf50;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        button[type="submit"]:hover {
-            background-color: #45a049;
-        }
-
-        a {
-            display: block;
-            margin-top: 10px;
-            text-align: center;
-            color: #4caf50;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <title th:text="#{CASA}">HOME</title>
+    <link rel="stylesheet" th:href="@{/css/template.css}">
+    <link rel="stylesheet" th:href="@{/css/ProveedoresAcciones.css}">
 </head>
+<header th:replace="/template :: header"></header>
 <body>
-
-
-<h1>Proveedor</h1>
-<h1>Acciones</h1>
 <div class="container">
-
-    <button th:onclick="'window.location.href=\'/ClienteController/Listadeclientes\''">Clientes</button>
-    <button th:onclick="'window.location.href=\'/ProductoController/ListadeProducto\''">Productos</button>
-    <button th:onclick="'window.location.href=\'/FacturaController/ListadeFacturas\''">Facturas</button>
-
+    <div class="card">
+    <div class="left-colum background1-left-colum">
+        <h6 th:text="#{TarjetaH6}">Clientes habituales del Provedor</h6>
+        <img src="/Imagenes/IconoCliente.png" alt="Descripción de la imagen" class="imagen-registro"><br><br>
+    </div>
+    <div class="right-colum">
+        <div>
+            <h4 th:text="#{TarjetaH4}">Tarjeta de acciones del proveedor con sus clientes</h4>
+        </div>
+        <h2 th:text="#{TarjetaH2}">Asociar clientes</h2>
+        <p th:text="#{Parrafo}">En esta sección se muestran los clientes que han realizado compras al proveedor seleccionado. Esta sesión permite también agregar clientes</p><br>
+        <button class="card-button" th:onclick="'window.location.href=\'/ClienteController/Listadeclientes\''" th:text="#{Clientes}">Clientes</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="left-colum background3-left-colum">
+            <h6 th:text="#{Tarjeta2H6}">Productos o Servicios del Provedor</h6>
+            <img src="/Imagenes/IconoProductos.png" alt="Descripción de la imagen" class="imagen-registro"><br><br>
+        </div>
+        <div class="right-colum">
+            <div>
+                <h4 th:text="#{Tarjeta2H4}">Tarjeta de acciones del proveedor con sus servicios/productos</h4>
+            </div>
+            <h2 th:text="#{Tarjeta2H2}">Asociar Productos o Servicios</h2>
+            <p th:text="#{Parrafo2}">Esta tarjeta permite a los proveedores realizar acciones con los productos o servicios que ofrecen. Por ejemplo: Agregar productos. </p><br>
+            <button class="card-button" th:onclick="'window.location.href=\'/ProductoController/ListadeProducto\''" th:text="#{Productos}">Productos</button>
+        </div>
+    </div>
+    <div class="card">
+        <div class="left-colum background2-left-colum">
+            <h6 th:text="#{Tarjeta3H6}">Facturas del Provedor</h6>
+            <img src="/Imagenes/Facturas.png" alt="Descripción de la imagen" class="imagen-registro"><br><br>
+        </div>
+        <div class="right-colum">
+            <div>
+                <h4 th:text="#{Tarjeta3H4}">Tarjeta de acciones del proveedor con sus facturas</h4>
+            </div>
+            <h2 th:text="#{Tarjeta3H2}">Asociar Facturas</h2>
+            <p th:text="#{Parrafo3}">Esta tarjeta permite a los proveedores realizar acciones con sus facturas. Por ejemplo: facturar sus ventas. </p><br>
+            <button class="card-button" th:onclick="'window.location.href=\'/FacturaController/ListadeFacturas\''"  th:text="#{Facturas}">Facturas</button>
+        </div>
+    </div>
 </div>
-
 </body>
+<footer th:replace="/template :: footer"></footer>
 </html>
