--- a/proyecto_2/progra_4/src/main/resources/templates/proveedorAcciones.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/proveedorAcciones.html
@@ -20,8 +20,7 @@
         </div>
         <h2 th:text="#{TarjetaH2}">Asociar clientes</h2>
         <p th:text="#{Parrafo}">En esta sección se muestran los clientes que han realizado compras al proveedor seleccionado. Esta sesión permite también agregar clientes</p><br>
-        <button class="card-button" th:onclick="'window.location.href=\'/ClienteController/Listadeclientes\''" th:text="#{Clientes}">Clientes</button>
-        </div>
+        <button class="card-button" th:onclick="'window.location.href=\'/ClienteController/Listadeclientes\''" th:text="#{Clientes}">Clientes</button>        </div>
     </div>
     <div class="card">
         <div class="left-colum background3-left-colum">
