--- a/proyecto_2/progra_4/src/main/resources/templates/formularioproveedor.html
+++ b/proyecto_2/progra_4/src/main/resources/templates/formularioproveedor.html
@@ -12,7 +12,7 @@
         }
 
         .container {
-            width: 50%;
+            width: 30%;
             margin: 20px auto;
             background-color: #fff;
             border-radius: 8px;
@@ -67,17 +67,15 @@
         a:hover {
             text-decoration: underline;
         }
+
+
     </style>
 </head>
 <body>
 
 <div class="container">
     <h1>Formulario de proveedor</h1>
-
     <form th:object="${proveedor}" th:action="@{/ProveedorController/nuevo_proveedor}" method="post">
-
-    <!--  <input type="hidden" th:field="*{idProveedor}">-->
-
         <label for="tipoProveedor">Tipo (Físico/Jurídico):</label>
         <select id="tipoProveedor" name="tipoProveedor" th:field="*{tipoProveedor}" required>
             <option value="Registrar">Registrar</option>
@@ -93,30 +91,26 @@
             <option value="Bienes">Bienes</option>
         </select>
         <label>Identificación: <input type="text" th:field="*{idProveedor}" required></label>
-
         <label>Nombre: <input type="text" th:field="*{nombre}" required></label>
-        <label>Correo: <input type="text" th:field="*{correoElectronico}" required></label>
+        <label>Correo: <input type="text" th:field="*{correoElectronico}" pattern=".+@.+\..+" required></label>
         <label>Contraseña: <input type="text" th:field="*{contrasena}" required></label>
         <label>Teléfono: <input type="text" th:field="*{telefono}" required></label>
         <label>Dirección: <input type="text" th:field="*{direccion}" required></label>
 
-
         <button type="submit">Guardar</button>
-
-
         <a th:href="@{/}" class="link">Ir a la página de inicio</a>
-
     </form>
+    <div th:if="${error}" class="alert alert-danger" role="alert">
+        <p th:text="${error}"></p>
+    </div>
     <div th:if="${errorTipoProveedor}" class="alert alert-danger" role="alert">
         <p th:text="${errorTipoProveedor}"></p>
     </div>
-
     <div th:if="${errorActividadComercial}" class="alert alert-danger" role="alert">
         <p th:text="${errorActividadComercial}"></p>
     </div>
 
 </div>
-
-
+<pre th:text="${{model}}"></pre>
 </body>
 </html>
